--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -21,7 +21,21 @@
           Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a>
         </p>
       </div>
-      <div class="card-footer text-muted"></div>
+      <div class="card-footer">
+        <h3>Edit</h3>
+        <form class="form-group" action="/urls/<%= shortURL %>" method="POST">
+          <label for="longURL">New URL:</label>
+          <input
+            class="col-sm-10"
+            id="longURL"
+            type="text"
+            name="longURL"
+            placeholder="<%= longURL %>"
+            style="display: inline-block; width: 300px; margin: 1em"
+          />
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
     </div>
     <!-- Bootstrap JS -->
     <script
