--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -12,11 +12,35 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="collapse navbar-collapse" style="justify-content: space-between" navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
+    
+      <% if( username === undefined){ %>
+        <form action="/login" method="POST">
+          <div class="form-group mb-2">
+            <label for="username"></label>
+             <input
+              class="form-control"
+              id="username"
+              name="username"
+              placeholder='Username'
+              style="display: inline-block; width: 200px; margin: 1em"
+              type="text"
+            />
+            <button type="submit" class="btn btn-outline-default">Login</button>
+          </div>
+        </form>
+      <% } else { %>
+        <form action="/logout" method="POST">
+          <span style="vertical-align: middle">Logged In As: <%= username %></span>
+          <div class="form-group mb-2" style="display: inline-block">
+          <button style="display: inline-block" type="submit" class="btn btn-outline-default">Logout</button>
+        </div>
+        </form>
+        <% } %>
     </div>
   </nav>
 </header>
