--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -19,28 +19,23 @@
       </div>
     
       <% if( username === undefined){ %>
-        <form action="/login" method="POST">
-          <div class="form-group mb-2">
-            <label for="username"></label>
-             <input
-              class="form-control"
-              id="username"
-              name="username"
-              placeholder='Username'
-              style="display: inline-block; width: 200px; margin: 1em"
-              type="text"
-            />
-            <button type="submit" class="btn btn-outline-default">Login</button>
-          </div>
+        <form class="form-inline my-2 my-lg-0" action="/login" method="POST">
+          <input 
+          class="form-control mr-sm-2" 
+          id="username"
+          name="username"
+          placeholder="Username" 
+          type="text" 
+          />
+          <button class="btn btn-outline-default my-2 my-sm-0" type="submit">Login</button>
         </form>
+        
       <% } else { %>
-        <form action="/logout" method="POST">
-          <span style="vertical-align: middle">Logged In As: <%= username %></span>
-          <div class="form-group mb-2" style="display: inline-block">
-          <button style="display: inline-block" type="submit" class="btn btn-outline-default">Logout</button>
-        </div>
+        <form class="form-inline my-2 my-lg-0" action="/logout" method="POST">
+          <span>Logged In As: <%= username %></span>
+          <button class="btn btn-outline-default my-2 my-sm-0" type="submit">Logout</button>
         </form>
-        <% } %>
+      <% } %>
     </div>
   </nav>
 </header>
