--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,7 +18,13 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     
-      <% if( username === undefined){ %>
+      <% if(user){ %>
+        <form class="form-inline my-2 my-lg-0" action="/logout" method="POST">
+          <span>Logged In As: <%= user.email %></span>
+          <button class="btn btn-outline-default my-2 my-sm-0" type="submit">Logout</button>
+        </form>
+        
+      <% } else { %>
         <form class="form-inline my-2 my-lg-0" action="/login" method="POST">
           <input 
           class="form-control mr-sm-2" 
@@ -28,12 +34,6 @@
           type="text" 
           />
           <button class="btn btn-outline-default my-2 my-sm-0" type="submit">Login</button>
-        </form>
-        
-      <% } else { %>
-        <form class="form-inline my-2 my-lg-0" action="/logout" method="POST">
-          <span>Logged In As: <%= username %></span>
-          <button class="btn btn-outline-default my-2 my-sm-0" type="submit">Logout</button>
         </form>
       <% } %>
     </div>
