--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,11 +26,11 @@
         <form action="/login" method="POST">
           <div class="form-group">
             <label for="email">Email address</label>
-            <input type="email" name="email" class="form-control" placeholder="Enter email" id="email" style="width: 300px">
+            <input type="email" name="email" class="form-control" placeholder="Enter email" id="email" style="width: 300px" required>
           </div>
           <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" name="password" class="form-control" placeholder="Enter password" id="password" style="width: 300px">
+            <input type="password" name="password" class="form-control" placeholder="Enter password" id="password" style="width: 300px" required>
           </div>
           <button type="submit" class="btn btn-primary">Login</button>
         </form>
