User testing for behaviour requirements and refining html to improve the look of the app.

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" style="justify-content: space-between" navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
-        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <a class="nav-item nav-link" href="/urls/new">Create New Short URL</a>
       </div>
       <% if(user){ %>
         <form class="form-inline my-2 my-lg-0" action="/logout" method="POST">
