--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -24,7 +24,7 @@
       <div class="card-footer">
         <h3>Edit</h3>
         <form class="form-group" action="/urls/<%= shortURL %>" method="POST">
-          <label for="longURL">New URL:</label>
+          <label for="longURL">New long URL:</label>
           <input
             class="col-sm-10"
             id="longURL"
