Added method-override as a dependency

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -36,7 +36,7 @@
             <td><%= urls[url] %></td>
             <td>
               <form action="/urls/<%= url %>">
-                <button type="submit" class="btn btn-outline-primary">
+                <button type="submit" class="btn btn-outline-info">
                   Edit
                 </button>
               </form>
