--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-success">
+  <nav class="navbar navbar-expand-md navbar-dark bg-info">
     <a class="navbar-brand" href="/urls">TinyApp</a>
     <button
       class="navbar-toggler"
@@ -23,7 +23,7 @@
       </div>
       <% if(user){ %>
       <form class="form-inline my-2 my-lg-0" action="/logout" method="POST">
-        <span class="mr-2">Logged In As: <%= user.email %></span>
+        <span class="mr-2">Logged in as: <%= user.email %>!</span>
         <button class="btn btn-outline-dark" type="submit">Logout</button>
       </form>
 
