--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -33,7 +33,7 @@
             placeholder="<%= longURL %>"
             style="display: inline-block; width: 300px; margin: 1em"
           />
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-info">Submit</button>
         </form>
       </div>
     </div>
