Modified all forms that should be PUT or DELETE and the relevant routes to use app.put and app.delete

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,7 +23,7 @@
       <div class="card-header"></div>
       <div class="card-body">
         <h3 class="card-title">Login</h3>
-        <form action="/login" method="POST">
+        <form action="/login?_method=PUT" method="POST">
           <div class="form-group">
             <label for="email">Email address</label>
             <input type="email" name="email" class="form-control" placeholder="Enter email" id="email" style="width: 300px" required>
