--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -23,7 +23,7 @@
 
     <main style="margin: 1em;">
       <h3>Create New TinyURL</h3>
-      <form class="form-inline" action="/urls" method="POST">
+      <form class="form-inline" action="/urls?_method=PUT" method="POST">
         <div class="form-group mb-2">
           <label for="longURL">Enter a URL:</label>
           <input
@@ -33,7 +33,7 @@
             placeholder="http://"
             style="width: 300px; margin: 1em"
           />
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-info">Submit</button>
         </div>
       </form>
     </main>
