--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -28,7 +28,9 @@
           <label for="longURL">Enter a URL:</label>
           <input
             class="form-control"
-            type="text"
+            type="url"
+            value="http://"
+            title="Include http://"
             name="longURL"
             placeholder="http://"
             style="width: 300px; margin: 1em"
