--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,6 +19,13 @@
 
   <body>
     <%- include ('partials/_header') %>
+   
+    <% if ( error !== null) { %>
+      <div class="alert alert-danger" role="alert">
+        <%= error %> Please <a href="/login" class="alert-link">login</a>, or register with a different email address.
+      </div>
+    <% } %>
+
     <div class="card text-left">
       <div class="card-header"></div>
       <div class="card-body">
@@ -26,11 +33,11 @@
         <form action="/register" method="POST">
           <div class="form-group">
             <label for="email">Email address</label>
-            <input type="email" name="email" class="form-control" placeholder="Enter email" id="email" style="width: 300px">
+            <input type="email" name="email" class="form-control" placeholder="Enter email" id="email" style="width: 300px" required>
           </div>
           <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" name="password" class="form-control" placeholder="Enter password" id="password" style="width: 300px">
+            <input type="password" name="password" class="form-control" placeholder="Enter password" id="password" style="width: 300px" required>
           </div>
           <button type="submit" class="btn btn-primary">Register</button>
         </form>
